<resources>
    <string name="app_name">科院社团</string>
    <string name="common_toast_sdcarderror">存储卡不可用，请确认您的存储卡可以正常使用</string>
    <string name="common_toast_sdcardspaceerror">存储空间不足</string>
    <string name="common_toast_connectionfailed">请检查网络是否可用</string>
    <string name="common_toast_connectionnodata">操作失败，请重试</string>
    <string name="common_toast_jsonparseerror">JSON解析数据出错</string>
    <string name="common_toast_error">操作失败</string>
    <string name="common_toast_exitapp">再按一次退出程序</string>

    <string name="login_label_unlogin_msg">您现在还没有登录，请登录。</string>
    <string name="login_label_unlogin_ok">登录</string>
    <string name="login_label_relogin_msg">您的账号在另一台设备上登录，请重新登录。</string>
    <string name="login_label_relogin">重新登录</string>

    <string name="relogin_msg">你的账号已经在其他手机上登陆！</string>
    <string name="relogin_btn_close">关闭</string>
    <string name="relogin_btn_relogin">重新登录</string>
    <string name="code_already_send">验证码已发送，请注意查收！</string>
    <string name="forget_passs_repass_error">两次输入密码不一致</string>
    <string name="forget_passs_repass_success">密码更改成功</string>
    <string name="forget_passs_right_phone">请输入有效的手机号</string>
    <string name="forget_passs_button_sure">确认</string>
    <string name="login_status_loading">正在登录...</string>
    <string name="login_status_common_lable">登录</string>
    <string name="login_status_submitting">正在提交...</string>
    <string name="login_status_submit">提交</string>

    <string name="common_label_ok">确定</string>
    <string name="common_label_back">返回</string>
    <string name="common_label_cancel">取消</string>

    <string name="nick_input_text">请输入您的昵称:</string>
    <string name="nick_input_ok_text">确定:</string>
    <string name="nick_input_fail">添加昵称失败</string>

    <string name="common_tabbar_label_main">首页</string>
    <string name="common_tabbar_label_organization">社团</string>
    <string name="common_tabbar_label_dynamic">动态</string>
    <string name="common_tabbar_label_mine">我的</string>
    <string name="organization_tv_activity">社团活动</string>


    <string name="dynamic_tabbar_activity">活动</string>
    <string name="dynamic_tabbar_all">全部</string>
    <string name="dynamic_tabbar_attended">已加入</string>

    <!--首页-->
    <string name="main_dynamic_details">动态详情</string>
    <string name="main_news_details">新闻详情</string>
    <!--首页 end-->

   <!--我的 start-->
    <string name="common_mine_label_organization">我的社团</string>
    <string name="common_mine_label_activity">我的活动</string>
    <string name="commone_mine_label_information">个人资料</string>
    <string name="change_user_info_change_img_success">头像修改成功</string>
    <string name="commone_set_mine">设置</string>
    <string name="common_tabbar_label_changepwd">修改密码</string>
    <string name="common_tabbar_label_about">关于我们</string>
    <string name="common_tabbar_label_suggestion">意见反馈</string>
    <string name="common_tabbar_label_VersionUpdate">检查更新</string>
    <string name="change_pass_no_equls">两次输入的密码不一致</string>
    <string name="change_pass_equls">修改密码成功</string>
    <string name="login_label_unlogout_msg">您确定要退出！！</string>
    <string name="profile_editor_give_up">您确定要放弃编辑吗！！</string>
    <string name="common_label_register_msg">注册成功</string>
    <string name="common_label_register">注册</string>
    <string name="common_exittext_hint_user">学\t号</string>
    <string name="common_exittext_hint_password">密\t码</string>
    <string name="common_label_forget_password">忘记密码</string>
    <string name="common_label_now_register">立即注册</string>
    <string name="common_label_imput_username">学　　号: </string>
    <string name="common_label_imput_password">输入密码: </string>
    <string name="common_label_ok_password">确认密码: </string>
    <string name="common_exittext_input_password_hint"> 请输入密码</string>
    <string name="common_exittext_input_usename_hint"> 请输入学号</string>
    <string name="update_version_new">已是最新版本</string>
    <string name="change_password_error">原密码错误</string>
    <string name="change_password_length">密码至少6位</string>
    <!---我的 end-->
    <!--社团 start-->
    <string name="common_activity">活动</string>
    <string name="common_news">新闻</string>
    <string name="organization_had_joined">已加入</string>
    <string name="organization_not_join">未加入</string>
    <string name="title_activity_organization_detail">OrganizationDetailActivity</string>
    <string name="title_activity_organization_president">OrganizationPresidentActivity</string>
    <string name="organization_detail_lable">社团详情</string>
    <string name="organization_president">会长资料</string>
    <string name="title_activity_organization_vice_president">OrganizationVicePresident</string>
    <string name="organization_vice_president">副会长</string>
    <string name="title_activity_organization_member">OrganizationMemberActivity</string>
    <string name="organization_member">成员</string>
    <string name="organization_leave_message">留言</string>
    <string name="organization_dynamic">社团活动</string>
    <string name="organization_news">社团新闻</string>
    <string name="title_activity_organization_leave_message">OrganizationLeaveMessageActivity
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_organization_dynamic">OrganizationDynamic</string>
    <string name="title_activity_organization_news">OrganizationNews</string>
    <string name="organization_president_data">个人资料</string>
    <string name="organization_vice_president_title">副会长资料</string>
    <!--社团 end-->

    <!--动态 start-->
    <string name="dynamic_activity">活动</string>
    <string name="dynamic_news">新闻</string>
    <string name="dynamic_type">全部</string>
    <string name="dynamic_attended">已加入</string>
    <string name="dynamic_warning">未找到符合的活动</string>
    <!--动态 end-->
</resources>
