<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg">
        <ImageView
            style="@style/Widget.Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/common_label_register"
            android:textColor="@color/common_actionbar_textcolor"
            android:textSize="@dimen/common_actionbar_textsize" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/common_activity_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_label_imput_username"
                android:textSize="@dimen/common_normal_text_size"
                android:gravity="center_vertical|center_horizontal" />
            <EditText
                android:id="@+id/tv_register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="2"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/common_exittext_input_usename_hint"
                android:paddingLeft="10dp"
                android:textSize="@dimen/common_normal_text_size"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_mine_line_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_label_imput_password"
                android:textSize="@dimen/common_normal_text_size"
                android:gravity="center_vertical|center_horizontal" />
            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="2"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/common_exittext_input_password_hint"
                android:maxLength="15"
                android:paddingLeft="10dp"
                android:textSize="@dimen/common_normal_text_size"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_mine_line_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_label_ok_password"
                android:textSize="@dimen/common_normal_text_size"
                android:gravity="center_vertical|center_horizontal" />
            <EditText
                android:id="@+id/et_register_Repassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="2"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/common_exittext_input_password_hint"
                android:maxLength="15"
                android:paddingLeft="10dp"
                android:textSize="@dimen/common_normal_text_size"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_mine_line_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_btn_height"
            android:background="@drawable/common_login_btn_selector"
            android:text="@string/common_label_now_register"
            android:textColor="@color/common_actionbar_textcolor"
            android:textSize="@dimen/common_btn_textsize"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</LinearLayout>