<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:gravity="center"
        android:text="@string/login_status_common_lable"
        android:textColor="@color/common_actionbar_textcolor"
        android:textSize="@dimen/common_actionbar_textsize"
        android:background="@color/common_actionbar_bg"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/mine_common_bg"
        android:gravity="center_horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/mine_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:adjustViewBounds="true"
            android:paddingTop="30dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_login_border"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="@dimen/common_activity_padding"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/common_exittext_hint_user"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="@dimen/common_normal_text_size" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_login_username"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/mine_login_edit_border" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/common_activity_padding"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/common_exittext_hint_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="@dimen/common_normal_text_size" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_login_password"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_login_forgetPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_label_forget_password"
                android:layout_gravity="left"
                android:textSize="@dimen/common_normal_text_size"
                android:textColor="@color/mine_login_textView"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_btn_height"
                android:background="@drawable/common_login_btn_selector"
                android:text="@string/login_status_common_lable"
                android:textColor="@color/common_white"
                android:textSize="@dimen/common_btn_textsize"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginTop="24dp"/>
            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_btn_height"
                android:background="@drawable/common_login_btn_register_selector"
                android:text="@string/common_label_register"
                android:textColor="@color/common_white"
                android:textSize="@dimen/common_btn_textsize"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
