<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F9">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="@color/common_actionbar_bg">
        <ImageView
            style="@style/Widget.Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/commone_set_mine"
            android:textSize="@dimen/common_actionbar_textsize"
            android:textColor="@color/common_actionbar_textcolor"
            android:gravity="center"/>

    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:gravity="center_horizontal">
                <ImageView
                    android:id="@+id/organization_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@color/common_mine_line_bg"/>
            <TextView
                android:id="@+id/tv_set_changePwd"
                style="@style/Widget.ArrowRight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_mine_item_height"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:drawableLeft="@mipmap/ic_register_password"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="@drawable/common_listitem_selector"
                android:text="@string/common_tabbar_label_changepwd"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_mine_line_bg"/>
            <TextView
                android:id="@+id/tv_set_about"
                style="@style/Widget.ArrowRight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_mine_item_height"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:drawableLeft="@mipmap/ic_mine_person"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="@drawable/common_listitem_selector"
                android:text="@string/common_tabbar_label_about"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_mine_line_bg"/>
            <LinearLayout
                android:id="@+id/tv_set_Version_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_mine_item_height"
                android:paddingLeft="10dp"
                android:paddingRight="7dp"
                android:clickable="true"
                android:background="@drawable/common_listitem_selector">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_version_update"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="12dp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/common_tabbar_label_VersionUpdate"/>
                <TextView
                    android:id="@+id/tv_get_version"
                    style="@style/Widget.ArrowRight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/common_mine_line_bg"/>
            <TextView
                android:id="@+id/tv_set_suggestion"
                style="@style/Widget.ArrowRight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_mine_item_height"
                android:paddingLeft="10dp"
                android:paddingRight="17dp"
                android:drawableLeft="@mipmap/ic_suggestion"
                android:gravity="center_vertical"
                android:clickable="true"
                android:background="@drawable/common_listitem_selector"
                android:text="@string/common_tabbar_label_suggestion"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:background="@color/common_mine_line_bg"/>
            <Button
                android:id="@+id/btn_set_logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/common_btn_logout_selector"
                android:text="退出账户"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>