<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/common_actionbar_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/common_tabbar_label_dynamic"
            android:textColor="@color/common_actionbar_textcolor"
            android:textSize="@dimen/common_actionbar_textsize" />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/window_bg">
        <RelativeLayout
            android:id="@+id/dynamic_tab_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@color/window_bg"
            android:gravity="center">
            <TextView
                android:id="@+id/dynamic_tab_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:drawableRight="@drawable/common_arrow_down_selector"
                android:textColor="@drawable/dynamic_tabbar_text_selector"
                android:text="@string/dynamic_tabbar_activity"/>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:background="@color/common_textcolor_gray"/>
        <RelativeLayout
            android:id="@+id/dynamic_tab_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@color/window_bg"
            android:gravity="center">
            <TextView
                android:id="@+id/dynamic_tab_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/common_arrow_down_selector"
                android:padding="10dp"
                android:textColor="@drawable/dynamic_tabbar_text_selector"
                android:text="@string/dynamic_type"/>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:background="@color/common_textcolor_gray"/>
        <RelativeLayout
            android:id="@+id/dynamic_tab_attended"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@color/window_bg"
            android:gravity="center">
            <TextView
                android:id="@+id/dynamic_tab_attended_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/common_arrow_down_selector"
                android:padding="10dp"
                android:textColor="@drawable/dynamic_tabbar_text_selector"
                android:text="@string/dynamic_tabbar_all"/>
        </RelativeLayout>
    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
        android:id="@+id/Dynamic_pull_to_refresh_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/Widget.Scrollbar"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="both"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <com.marchsoft.organization.widget.AutoHeightListView
                android:id="@+id/dynamic_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0px"
                android:focusable="false">
            </com.marchsoft.organization.widget.AutoHeightListView>
            <com.marchsoft.organization.widget.AutoHeightListView
                android:id="@+id/news_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:divider="@null"
                android:dividerHeight="0px"
                android:focusable="false">

            </com.marchsoft.organization.widget.AutoHeightListView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="没有符合的信息"
                android:padding="10dp"
                android:id="@+id/textView"
                android:layout_marginTop="200dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:layout_weight="0.03" />

        </LinearLayout>
    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
</LinearLayout>